*added TlsDestructorInitializer as a field to LogStaticInitializer in order to make sure an instance of TlsDestructorInitializer is created before  LogStaticInitializer is initialized
*removed print in TcpConnection that could end up printing garbage at the end of messages that are not null terminated
*added loopback address checking to Tuple::isPrivateAddress


==DUM==
===New features===
*added a getRequest() method to ClientOutOfDialogReq so that the request for the response can be accessed
*implemented InviteSession::reject while in the SentReinviteAnswered state. This is useful when needing to reject with an empty ACK an offer that was requested (using an empty INVITE) while in a dialog.
*added ability to asynchronously end an AppDialogSet using AppDialogSet::endCommand. 
*added new public APIs to DialogUsageManager so that the application can find AppDialogs/AppDialogSets from a DialogId or a DialogSetId. This is useful if the application wants to find a dialog set from a SIP message alone.
*added the ability to end a publication without sending a final PUBLISH with an expires of 0
*modified client subscription to allow a subscription to be terminated without sending a final SUBSCRIBE request, useful in cases where an extension Subscription-State is used that signifies that the subscription is terminated
*added ServerAuthManager support for UA's who set auth username="user@domain" rather than username="user"
*support for mutual TLS/client certificate verification (as DUM feature)
*enhanced ServerRegistration:
**ensure that ContactInstanceRecord::mReceivedFrom is always populated - not just in outbound use cases - added a new flag to indicate when flow routing is required
**added a new mPublicAddress flag member to ContactInstanceRecord - to assist repro feature to do geo proximity routing
*test/basicClient - allow subscription and call if not registering

===Bug fixes===